# KasKasPython

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
docs/: conf.py  index.md  reference.md  usage.md
src/_kaskas/: __init__.py  app.py  daemon.py  datacollector.py  datalink_serial.py  dialect.py  kaskas.py  kaskas_api.py  log.py  pyro_server.py  streamlit_app.py  streamlit_launcher.py  streamlit_memory_guard.sh
src/_kaskas/app/: app.py
src/_kaskas/datalink/: serial.py
src/_kaskas/streamlit/: streamlit_app.py  streamlit_launcher.py
src/_kaskas/utils/: beacon.py  cpu_lock.py  filelock.py  filesystem.py  io_serial.py  module.py  singleton.py  toml_config.py
src/_kaskas/utils/atomic_counter/: __init__.py  atomic_counter.py
src/_kaskas/utils/atomic_counter/tests/: test_atomic_counter.py
src/kaskas/: __init__.py  __main__.py
