[tool.poetry]
name = "kaskas"
version = "0.0.0"
description = "Kaskas"
authors = ["Stan Verschuuren <31728406+s-t-a-n@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/s-t-a-n/kaskas"
repository = "https://github.com/s-t-a-n/kaskas"
documentation = "https://kaskas.readthedocs.io"
classifiers = [
    "Development Status :: 1 - Planning",
]
#packages = [{ include = "*", from = "src" }]

[tool.poetry.urls]
Changelog = "https://github.com/s-t-a-n/kaskas/releases"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
streamlit = "^1.36.0"
plotly = "^5.22.0"
opencv-python = "^4.10.0.84"
streamlit-authenticator = "^0.3.2"
pyserial = "^3.5"
zmq = "^0.0.0"
pyro5 = "^5.15"
rich = "^13.7.1"

[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = { extras = ["toml"], version = ">=6.2" }
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
typeguard = ">=2.13.3"

[tool.poetry.scripts]
kaskas = "kaskas.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["_kaskas", "kaskas", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
